--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,27 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
+<ion-header>
+  <ion-toolbar color="primary">
     <ion-title>
-      Blank
+      Ionic Input Mask
     </ion-title>
+    <ion-button></ion-button>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+<ion-content>
+  <ion-button expand="block" (click)="setValue()">Set Value</ion-button>
+  <ion-item>
+    <ion-input [(ngModel)]="a" label="Cool number" [maskito]="digitsOnlyMask" [maskitoElement]="predicate" />
+  </ion-item>
+  <ion-item>
+    <ion-input label="Time" [maskito]="timeMask" [maskitoElement]="predicate" />
+  </ion-item>
+  <ion-item>
+    <ion-input label="Name" [maskito]="uppercaseMask" [maskitoElement]="predicate" />
+  </ion-item>
+  <ion-item>
+    <ion-input label="CVV" [maskito]="options" [maskitoElement]="predicate" />
+  </ion-item>
+  <ion-item>
+    <ion-input label="Number" [maskito]="numberMask" [maskitoElement]="predicate" />
+  </ion-item>
 </ion-content>
